--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "CRUD operation in console",
     "type": "library",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Oleg Koltsov",
@@ -10,14 +11,19 @@
         }
     ],
     "require": {
+        "padavvan/console-message": "dev-master",
         "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.0",
+        "yiisoft/yii2": "~2.0.0"
     },
     "autoload": {
         "psr-0": {
             "padavvan\\console":   "src/"
         }
     },
-    "minimum-stability": "dev",
-    "require": {}
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/padaVVan/console-message.git"
+        }
+    ]
 }
